--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
+spring.liquibase.change-log=classpath:db/changelog/db.changelog.yaml
