--- a/src/main/resources/db/changelog/db.changelog.yaml
+++ b/src/main/resources/db/changelog/db.changelog.yaml
@@ -23,7 +23,7 @@ databaseChangeLog:
       author: 'Anastasiya Scshekotina'
       changes:
         - createTable:
-            tableName: 'lesson'
+            tableName: 'lessons'
             columns:
               - column:
                   name: id
