--- a/src/main/resources/db/changelog/db.changelog.yaml
+++ b/src/main/resources/db/changelog/db.changelog.yaml
@@ -81,7 +81,6 @@ databaseChangeLog:
               - column:
                   name: deleting_date
                   type: timestamp
-                  defaultValueComputed: CURRENT_TIMESTAMP
               - column:
                   name: deleting_author_id
                   type: bigint
@@ -158,7 +157,6 @@ databaseChangeLog:
               - column:
                   name: deleting_date
                   type: timestamp
-                  defaultValueComputed: CURRENT_TIMESTAMP
               - column:
                   name: deleting_author_id
                   type: bigint
@@ -260,7 +258,6 @@ databaseChangeLog:
               - column:
                   name: deleting_date
                   type: timestamp
-                  defaultValueComputed: CURRENT_TIMESTAMP
               - column:
                   name: deleting_author_id
                   type: bigint
@@ -326,7 +323,6 @@ databaseChangeLog:
               - column:
                   name: deleting_date
                   type: timestamp
-                  defaultValueComputed: CURRENT_TIMESTAMP
               - column:
                   name: deleting_author_id
                   type: bigint
@@ -427,3 +423,28 @@ databaseChangeLog:
             columns:
               - column:
                   name: email
+  - changeSet:
+      id: '2023110701'
+      author: 'Anastasiya Scshekotina'
+      changes:
+        - insert:
+            columns:
+              - column:
+                  name: id
+                  value: 1
+              - column:
+                  name: username
+                  value: admin
+              - column:
+                  name: password
+                  value: admin
+              - column:
+                  name: firstname
+                  value: Админ
+              - column:
+                  name: lastname
+                  value: Админович
+              - column:
+                  name: email
+                  value: admin@email.com
+            tableName: users
